--- a/style.css
+++ b/style.css
@@ -2,9 +2,14 @@ table {
     text-align: center;
     color: red;
     background-color: blue;
-    vertical-align: center;
-    width: 600px;
-    height: 600px;
+    vertical-align: middle;
+    table-layout: display;
+    width: 500;
+    height: 500px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    top: 50%;
+    left: 50%;
     
     
 }
@@ -15,11 +20,45 @@ table {
     text-align: center;
     border: solid;
     margin: auto;
-    vertical-align: bottom;
+    
+   
+    
+    
+}
+
+.tr {
+    text-align: center;
+    
+    
+    
+}
+
+#fixedheight {
+    table-layout: fixed;
+    text-align:center;
+
+}
+
+#fixedheight td {
+    height: 100px;
+    overflow: hidden;
+    width: 50%;
+    text-align: center;
 }
 
 body {
-    background-color: yellow;
+    background-image: url(https://cbsla.files.wordpress.com/2013/08/shutterstock_137588087.jpg);
+    text-align: center;
+}
+
+h1 {
+    text-align: center;
+    color: white;
+    
+}
+
+#score {
+    color: white;
 }
 
 #value {
