--- a/style.css
+++ b/style.css
@@ -61,13 +61,21 @@ h1 {
     color: white;
 }
 
+
+.cat {
+color: red;
+font-size: 150%;
+font-weight: bold;
+}
+
 #value {
     color:white;
     text-decoration: none;
+}
+    
 
 
 #value: hover {
     color: yellow;
     font-weight: bold;
-}
 }
